demo-ibm-liberty-session/gke-deploy-yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibm-liberty-session-deployment
spec:
  selector:
    matchLabels:
      app: ibm-liberty-session
  replicas: 2
  template:
    metadata:
      labels:
        app: ibm-liberty-session
    spec:
      containers:
      - name: ibm-liberty-session
        image: asia.gcr.io/first-demo-marksu-001/demo-ibm-liberty-session:43
        ports:
        - containerPort: 9080
