demo-ibm-liberty-session/gke-deploy-yaml/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: ibm-liberty-session-nodeport-service
   namespace: default
   labels:
      app: ibm-liberty-session
   annotations:
      cloud.google.com/neg: '{"ingress": true}'
spec:
   ports:
   -  protocol: TCP
      port: 9080
      targetPort: 9080
   selector:
      app: ibm-liberty-session
   type: NodePort
